# stellatrain

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  test_script.sh  test_script_imagenet.sh
.github/workflows/: docker.yml
backend/: CMakeLists.txt
backend/scikit-optimize/skopt/: __init__.py  acquisition.py
backend/scikit-optimize/skopt/optimizer/: optimizer.py
backend/src/compress/: compressor.h  randomk.cpp  randomk.h  thresholdv.cpp  thresholdv.h  thresholdv16.cpp  thresholdv16.h  topk.cpp  topk.h
backend/src/engine/: batch_rate_alloc.py  batch_rate_alloc_optim.py  comm_manager.cpp  comm_manager.h  config.h  core.cpp  core.h  core_internal.h  core_module_api.cpp  core_module_load.cpp  cuda_util.cu  entry.cpp  logger.h  message.h  module.h  shm_manager.cpp  shm_manager.h  task.cpp  task.h  telemetry_client.cpp  telemetry_client.h  telemetry_server.cpp  telemetry_server.h  threadpool.cpp  threadpool.h
backend/src/engine/modules/: barrier_checker.cpp  barrier_checker.h  compress.cpp  compress.h  cpu_gather.cpp  cpu_gather.h  cpu_optimize.cpp  cpu_optimize.h  d2h_copy.cpp  d2h_copy.h  grad_exchange.cpp  grad_exchange.h  h2d_copy.cpp  h2d_copy.h  null.cpp  null.h
backend/src/misc/: array_util.h  bandwidth_monitor.h  hello.cpp  hello.h  ipaddr.cpp  ipaddr.h  simdxorshift128plus.c  simdxorshift128plus.h
backend/src/optim/: adam.cpp  adam.h  sgd copy.cpp  sgd.h  sgd_naive.cpp  sgd_naive.h  sparse_optimizer.h
backend/src/proto/: CMakeLists.txt  message.proto
backend/src/python/: pybind.cpp
backend/src/python/fasterdp/: __init__.pyi  model_wrapper.py
backend/test/: cleanup.sh  test_end_to_end.py
bayesian/profile/: resnet152_frac50_368.pkl  resnet50_frac50_256.pkl  swinb_frac25_512.pkl  swinb_frac25_512.v2.pkl  vitb16_frac25_512.pkl  vitb16_frac25_512.v2.pkl
util/: dataloader.py  datasets.py  transforms.py  util.py
